[gd_scene load_steps=3 format=3 uid="uid://bqqjtua5wwul1"]

[ext_resource type="Script" path="res://Menu/main_menu.gd" id="1_87am8"]
[ext_resource type="LabelSettings" uid="uid://r88stdiwsgk6" path="res://Menu/title_label.tres" id="2_yhf42"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_87am8")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.181
offset_bottom = 0.175995
text = "Hot Summons
In Your Area"
label_settings = ExtResource("2_yhf42")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -198.0
offset_top = -196.0
offset_right = 186.0
offset_bottom = 123.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Start"

[node name="HowToPlay" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "How to play"

[node name="Options" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Quit"

[node name="UITestLvel" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/HowToPlay" to="." method="_on_how_to_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="VBoxContainer/UITestLvel" to="." method="_on_ui_test_lvel_pressed"]
